@@ -1,3 +1,4 @@
+* Remove the default order on MPTT
 * Add grouped attribute to data tag
 * Store selection tree state
 * Add order to Action Window
